methods.basics.Methods.scala.error
Compilation error:
Methods:2: error: ';' expected but ',' found.
  var X,Y:Int =0,0
                ^