methods.basics.Methods.scala.code
def goAndGet() {
  var X,Y:Int =0,0
  X=getX()
  Y=getY()
  while(!estSurBiscuit()){
    avance();
  }
  prendBiscuit()
  setPos(X,Y)
  poseBiscuit()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}